la logique de recherche

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,7 +12,7 @@
       <div class="collapse navbar-collapse" id="navbarCollapse">
         <div class="navbar-nav mx-auto">
           <a routerLink="/home" class="nav-item nav-link active">Home</a>
-          <a routerLink="/about" class="nav-item nav-link">About</a>
+          <a routerLink="/profil" class="nav-item nav-link">About</a>
           <a routerLink="/service" class="nav-item nav-link">Services</a>
           <a routerLink="/recette" class="nav-item nav-link">Recette</a>
           <a routerLink="/listresto"  class="nav-item nav-link">Restorent</a>
