--- a/src/app/components/recette/recette.component.html
+++ b/src/app/components/recette/recette.component.html
@@ -1,223 +1,33 @@
-
-
-
-<!-- Events Start -->
-<div class="container-fluid event py-6">
+<div class="container-fluid service py-6">
   <div class="container">
     <div class="text-center wow bounceInUp" data-wow-delay="0.1s">
-      <small class="d-inline-block fw-bold text-dark text-uppercase bg-light border border-primary rounded-pill px-4 py-1 mb-3">Latest Events</small>
-      <h1 class="display-5 mb-5">Our Social & Professional Events Gallery</h1>
+      <small class="d-inline-block fw-bold text-dark text-uppercase bg-light border border-primary rounded-pill px-4 py-1 mb-3">Our Services</small>
+      <h1 class="display-5 mb-5">What We Offer</h1>
     </div>
-    <div class="tab-class text-center">
-      <ul class="nav nav-pills d-inline-flex justify-content-center mb-5 wow bounceInUp" data-wow-delay="0.1s">
-        <li class="nav-item p-2">
-          <a class="d-flex mx-2 py-2 border border-primary bg-light rounded-pill active" data-bs-toggle="pill" href="#tab-1">
-            <span class="text-dark" style="width: 150px;">All Events</span>
-          </a>
-        </li>
-        <li class="nav-item p-2">
-          <a class="d-flex py-2 mx-2 border border-primary bg-light rounded-pill" data-bs-toggle="pill" href="#tab-2">
-            <span class="text-dark" style="width: 150px;">Wedding</span>
-          </a>
-        </li>
-        <li class="nav-item p-2">
-          <a class="d-flex mx-2 py-2 border border-primary bg-light rounded-pill" data-bs-toggle="pill" href="#tab-3">
-            <span class="text-dark" style="width: 150px;">Corporate</span>
-          </a>
-        </li>
-        <li class="nav-item p-2">
-          <a class="d-flex mx-2 py-2 border border-primary bg-light rounded-pill" data-bs-toggle="pill" href="#tab-4">
-            <span class="text-dark" style="width: 150px;">Cocktail</span>
-          </a>
-        </li>
-        <li class="nav-item p-2">
-          <a class="d-flex mx-2 py-2 border border-primary bg-light rounded-pill" data-bs-toggle="pill" href="#tab-5">
-            <span class="text-dark" style="width: 150px;">Buffet</span>
-          </a>
-        </li>
-      </ul>
-      <div class="tab-content">
-        <div id="tab-1" class="tab-pane fade show p-0 active">
-          <div class="row g-4">
-            <div class="col-lg-12">
-              <div class="row g-4">
-                <div class="col-md-6 col-lg-3 wow bounceInUp" data-wow-delay="0.1s">
-                  <div class="event-img position-relative">
-                    <img class="img-fluid rounded w-100" src="assets/img/event-1.jpg" alt="">
-                    <div class="event-overlay d-flex flex-column p-4">
-                      <h4 class="me-auto">Wedding</h4>
-                      <a href="img/event-1.jpg" data-lightbox="event-1" class="my-auto"><i class="fas fa-search-plus text-dark fa-2x"></i></a>
-                    </div>
-                  </div>
-                </div>
-                <div class="col-md-6 col-lg-3 wow bounceInUp" data-wow-delay="0.3s">
-                  <div class="event-img position-relative">
-                    <img class="img-fluid rounded w-100" src="assets/img/event-2.jpg" alt="">
-                    <div class="event-overlay d-flex flex-column p-4">
-                      <h4 class="me-auto">Corporate</h4>
-                      <a href="img/event-2.jpg" data-lightbox="event-2" class="my-auto"><i class="fas fa-search-plus text-dark fa-2x"></i></a>
-                    </div>
-                  </div>
-                </div>
-                <div class="col-md-6 col-lg-3 wow bounceInUp" data-wow-delay="0.5s">
-                  <div class="event-img position-relative">
-                    <img class="img-fluid rounded w-100" src="assets/img/event-3.jpg" alt="">
-                    <div class="event-overlay d-flex flex-column p-4">
-                      <h4 class="me-auto">Wedding</h4>
-                      <a href="img/event-3.jpg" data-lightbox="event-3" class="my-auto"><i class="fas fa-search-plus text-dark fa-2x"></i></a>
-                    </div>
-                  </div>
-                </div>
-                <div class="col-md-6 col-lg-3 wow bounceInUp" data-wow-delay="0.7s">
-                  <div class="event-img position-relative">
-                    <img class="img-fluid rounded w-100" src="assets/img/event-4.jpg" alt="">
-                    <div class="event-overlay d-flex flex-column p-4">
-                      <h4 class="me-auto">Buffet</h4>
-                      <a href="img/event-4.jpg" data-lightbox="event-4" class="my-auto"><i class="fas fa-search-plus text-dark fa-2x"></i></a>
-                    </div>
-                  </div>
-                </div>
-                <div class="col-md-6 col-lg-3 wow bounceInUp" data-wow-delay="0.1s">
-                  <div class="event-img position-relative">
-                    <img class="img-fluid rounded w-100" src="assets/img/event-5.jpg" alt="">
-                    <div class="event-overlay d-flex flex-column p-4">
-                      <h4 class="me-auto">Cocktail</h4>
-                      <a href="img/event-5.jpg" data-lightbox="event-5" class="my-auto"><i class="fas fa-search-plus text-dark fa-2x"></i></a>
-                    </div>
-                  </div>
-                </div>
-                <div class="col-md-6 col-lg-3 wow bounceInUp" data-wow-delay="0.3s">
-                  <div class="event-img position-relative">
-                    <img class="img-fluid rounded w-100" src="assets/img/event-6.jpg" alt="">
-                    <div class="event-overlay d-flex flex-column p-4">
-                      <h4 class="me-auto">Wedding</h4>
-                      <a href="img/event-6.jpg" data-lightbox="event-6" class="my-auto"><i class="fas fa-search-plus text-dark fa-2x"></i></a>
-                    </div>
-                  </div>
-                </div>
-                <div class="col-md-6 col-lg-3 wow bounceInUp" data-wow-delay="0.5s">
-                  <div class="event-img position-relative">
-                    <img class="img-fluid rounded w-100" src="assets/img/event-7.jpg" alt="">
-                    <div class="event-overlay d-flex flex-column p-4">
-                      <h4 class="me-auto">Buffet</h4>
-                      <a href="img/event-7.jpg" data-lightbox="event-7" class="my-auto"><i class="fas fa-search-plus text-dark fa-2x"></i></a>
-                    </div>
-                  </div>
-                </div>
-                <div class="col-md-6 col-lg-3 wow bounceInUp" data-wow-delay="0.7s">
-                  <div class="event-img position-relative">
-                    <img class="img-fluid rounded w-100" src="assets/img/event-8.jpg" alt="">
-                    <div class="event-overlay d-flex flex-column p-4">
-                      <h4 class="me-auto">Corporate</h4>
-                      <a href="img/event-8.jpg" data-lightbox="event-17" class="my-auto"><i class="fas fa-search-plus text-dark fa-2x"></i></a>
-                    </div>
-                  </div>
-                </div>
-              </div>
+  <div style="align-content: center">
+    <div class="text-center wow bounceInUp mb-5" data-wow-delay="0.1s">
+      <form class="d-inline-flex justify-content-center" (keyup.enter)="searchRecetteByVille()">
+        <div class="nav nav-pills" id="pills-tab" role="tablist">
+          <div class="input-group">
+            <p class="text-muted" style="margin-right: 100px; float: right">Consulter les recettes préférées par ville</p>
+            <input type="text" class="form-control" style="width: 400px;" placeholder="Search" aria-label="Search" aria-describedby="button-addon2" [(ngModel)]="nomVille" [ngModelOptions]="{standalone: true}">
+            <div class="input-group-append" style="align-items: center;margin-left: 50px">
+              <button class="btn btn-outline-secondary" type="button" id="button-addon2" (click)="searchRecetteByVille()">Search</button>
             </div>
           </div>
         </div>
-        <div id="tab-2" class="tab-pane fade show p-0">
-          <div class="row g-4">
-            <div class="col-lg-12">
-              <div class="row g-4">
-                <div class="col-md-6 col-lg-3">
-                  <div class="event-img position-relative">
-                    <img class="img-fluid rounded w-100" src="assets/img/event-1.jpg" alt="">
-                    <div class="event-overlay d-flex flex-column p-4">
-                      <h4 class="me-auto">Wedding</h4>
-                      <a href="img/01.jpg" data-lightbox="event-8" class="my-auto"><i class="fas fa-search-plus text-dark fa-2x"></i></a>
-                    </div>
-                  </div>
-                </div>
-                <div class="col-md-6 col-lg-3">
-                  <div class="event-img position-relative">
-                    <img class="img-fluid rounded w-100" src="assets/img/event-2.jpg" alt="">
-                    <div class="event-overlay d-flex flex-column p-4">
-                      <h4 class="me-auto">Wedding</h4>
-                      <a href="img/01.jpg" data-lightbox="event-9" class="my-auto"><i class="fas fa-search-plus text-dark fa-2x"></i></a>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div id="tab-3" class="tab-pane fade show p-0">
-          <div class="row g-4">
-            <div class="col-lg-12">
-              <div class="row g-4">
-                <div class="col-md-6 col-lg-3">
-                  <div class="event-img position-relative">
-                    <img class="img-fluid rounded w-100" src="assets/img/event-3.jpg" alt="">
-                    <div class="event-overlay d-flex flex-column p-4">
-                      <h4 class="me-auto">Corporate</h4>
-                      <a href="img/01.jpg" data-lightbox="event-10" class="my-auto"><i class="fas fa-search-plus text-dark fa-2x"></i></a>
-                    </div>
-                  </div>
-                </div>
-                <div class="col-md-6 col-lg-3">
-                  <div class="event-img position-relative">
-                    <img class="img-fluid rounded w-100" src="assets/img/event-4.jpg" alt="">
-                    <div class="event-overlay d-flex flex-column p-4">
-                      <h4 class="me-auto">Corporate</h4>
-                      <a href="img/01.jpg" data-lightbox="event-11" class="my-auto"><i class="fas fa-search-plus text-dark fa-2x"></i></a>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div id="tab-4" class="tab-pane fade show p-0">
-          <div class="row g-4">
-            <div class="col-lg-12">
-              <div class="row g-4">
-                <div class="col-md-6 col-lg-3">
-                  <div class="event-img position-relative">
-                    <img class="img-fluid rounded w-100" src="assets/img/event-5.jpg" alt="">
-                    <div class="event-overlay d-flex flex-column p-4">
-                      <h4 class="me-auto">Cocktail</h4>
-                      <a href="img/01.jpg" data-lightbox="event-12" class="my-auto"><i class="fas fa-search-plus text-dark fa-2x"></i></a>
-                    </div>
-                  </div>
-                </div>
-                <div class="col-md-6 col-lg-3">
-                  <div class="event-img position-relative">
-                    <img class="img-fluid rounded w-100" src="assets/img/event-6.jpg" alt="">
-                    <div class="event-overlay d-flex flex-column p-4">
-                      <h4 class="me-auto">Cocktail</h4>
-                      <a href="img/01.jpg" data-lightbox="event-13" class="my-auto"><i class="fas fa-search-plus text-dark fa-2x"></i></a>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div id="tab-5" class="tab-pane fade show p-0">
-          <div class="row g-4">
-            <div class="col-lg-12">
-              <div class="row g-4">
-                <div class="col-md-6 col-lg-3">
-                  <div class="event-img position-relative">
-                    <img class="img-fluid rounded w-100" src="assets/img/event-7.jpg" alt="">
-                    <div class="event-overlay d-flex flex-column p-4">
-                      <h4 class="me-auto">Buffet</h4>
-                      <a href="img/01.jpg" data-lightbox="event-14" class="my-auto"><i class="fas fa-search-plus text-dark fa-2x"></i></a>
-                    </div>
-                  </div>
-                </div>
-                <div class="col-md-6 col-lg-3">
-                  <div class="event-img position-relative">
-                    <img class="img-fluid rounded w-100" src="assets/img/event-8.jpg" alt="">
-                    <div class="event-overlay d-flex flex-column p-4">
-                      <h4 class="me-auto">Buffet</h4>
-                      <a href="img/01.jpg" data-lightbox="event-15" class="my-auto"><i class="fas fa-search-plus text-dark fa-2x"></i></a>
-                    </div>
-                  </div>
-                </div>
-              </div>
+      </form>
+    </div>
+  </div>
+    <div class="row g-4">
+      <div class="col-lg-3 col-md-6" *ngFor="let recette of recettes">
+        <div class="bg-light rounded service-item">
+          <div class="service-content d-flex align-items-center justify-content-center p-4">
+            <div class="service-content-icon text-center">
+              <i class="fas fa-cheese fa-7x text-primary mb-4"></i>
+              <h4 class="mb-3">{{recette.nom}}</h4>
+              <p class="mb-4">{{recette.description}}.</p>
+              <a href="#" class="btn btn-primary px-4 py-2 rounded-pill">Read More</a>
             </div>
           </div>
         </div>
@@ -225,10 +35,9 @@
     </div>
   </div>
 </div>
-<!-- Events End -->
 
-
-<!-- Book Us Start -->
+<!-- Service End -->
+          <!-- Book Us Start -->
 <div class="container-fluid contact py-6 wow bounceInUp" data-wow-delay="0.1s">
   <div class="container">
     <div class="row g-0">
